<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/organizerAddEventDetails"
    android:background="#EEECDE">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="75sp"
        android:src="@drawable/logo"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/eventPosterImageView"
        android:layout_width="284dp"
        android:layout_height="150dp"
        android:clickable="true"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="Cancel"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="300sp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:hint="*Event Name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />


    <TextView
        android:id="@+id/locationText"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="*Location"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/locationSetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventPosterImageView" />

    <TextView
        android:id="@+id/notifText"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginEnd="4dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="Ensure notifications are turned on to recieve notifications about event."
        android:textColor="@color/black"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/createEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dayText"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="*Day"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/datSetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="290sp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="*Time"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/timeSetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayText" />


    <TextView
        android:id="@+id/attendeeLimitText"
        android:layout_width="290sp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="Attendee Limit"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/attendeeLimitSetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="285dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="*Description"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/descriptionSetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendeeLimitText" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:text="Create Event"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/datSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B2C8A6"
        android:text="Set Day"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationSetButton" />

    <Button
        android:id="@+id/timeSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B2C8A6"
        android:text="Set Time"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datSetButton" />

    <Button
        android:id="@+id/attendeeLimitSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B2C8A6"
        android:text="Set Limit"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSetButton" />

    <Button
        android:id="@+id/descriptionSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B2C8A6"
        android:text="Set Desc"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/attendeeLimitText"
        app:layout_constraintTop_toBottomOf="@+id/attendeeLimitSetButton" />

    <Button
        android:id="@+id/locationSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#B2C8A6"
        android:text="Set Location"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventPosterImageView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="Geolocation Tracking "
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />


</androidx.constraintlayout.widget.ConstraintLayout>
