<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#EEECDE">
    <TextView
        android:id="@+id/eventNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:paddingEnd="75dp"
        android:text="Event Name"
        android:textColor="#575656"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/organizerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:paddingEnd="75dp"
        android:text="Organizer"
        android:textColor="#575656"
        android:textSize="20sp"
        android:textStyle="bold|italic" />
</LinearLayout>