<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/organizerHome"
    android:background="#EEECDE">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/organizerTextView"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Organizer"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/createNewEventButton"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:text="Create New Event"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/viewMyEventsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organizerTextView" />

    <Button
        android:id="@+id/viewMyEventsButton"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:backgroundTint="#9A8FBF"
        android:text="View my Events"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organizerTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>